--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "mern-social",
   "version": "1.0.0",
-  "description": "A MERN stack based social media application",
-  "author": "Shama Hoque",
-  "license": "MIT",
+  "description": "",
+  "author": "Chris Tran",
+  "license": "",
   "keywords": [
     "react",
     "express",
@@ -13,9 +13,9 @@
   ],
   "repository": {
     "type": "git",
-    "url": "https://github.com/shamahoque/mern-social.git"
+    "url": "https://github.com/PsychoChris89/FIFA_World_Cup_Social_Network.git"
   },
-  "homepage": "https://github.com/shamahoque/mern-social",
+  "homepage": "https://github.com/PsychoChris89/FIFA_World_Cup_Social_Network.git",
   "main": "./dist/server.generated.js",
   "scripts": {
     "development": "nodemon",
