--- a/package.json
+++ b/package.json
@@ -18,9 +18,10 @@
   "homepage": "https://github.com/PsychoChris89/FIFA_World_Cup_Social_Network.git",
   "main": "./dist/server.generated.js",
   "scripts": {
+    "start": "nodemon",
     "development": "nodemon",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
-    "start": "node server.js"
+    
   },
   "engines": {
     "node": "8.11.1",
