--- a/package.json
+++ b/package.json
@@ -15,14 +15,11 @@
     "type": "git",
     "url": "https://github.com/PsychoChris89/FIFA_World_Cup_Social_Network.git"
   },
+  "homepage": "https://github.com/PsychoChris89/FIFA_World_Cup_Social_Network.git",
   "main": "./dist/server.generated.js",
   "scripts": {
-      "server": "node server.js",
-      "client": "cd client && npm run start",
-      "start": "./node_modules/.bin/concurrently \"./node_modules/.bin/nodemon\" \"npm run client\"",
-      "build": "cd client && npm run build",
-      "deploy": "yarn build && git add . && git commit -m \"Building for production\" && git push heroku master",
-      "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "node ./dist/server.generated.js",
+    "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js"
   },
   "engines": {
     "node": "8.11.1",
