--- a/package.json
+++ b/package.json
@@ -16,8 +16,10 @@
     "url": "https://github.com/PsychoChris89/FIFA_World_Cup_Social_Network.git"
   },
   "scripts": {
-    "start": "nodemon",
-    "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js"
+    "server": "node ./server/server.js",
+    "client": "cd client && npm run start",
+    "start": "node ./dist/server.generated.js",
+    "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
   },
   "engines": {
     "node": "8.11.1",
