--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
     "url": "https://github.com/PsychoChris89/FIFA_World_Cup_Social_Network.git"
   },
   "scripts": {
-    "client": "cd client && npm run start",
-    "start": "node ./dist/server.generated.js",
+    "start": "nodemon",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
+    "client": "cd client && npm run start"
   },
   "engines": {
     "node": "8.11.1",
