--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "url": "https://github.com/PsychoChris89/FIFA_World_Cup_Social_Network.git"
   },
   "scripts": {
-    "start": "nodemon",
+    "start": "npm ./dist/server.generated.js",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
-    "client": "cd client && npm run start"
+    "client": "cd client && npm start"
+    
+ 
   },
   "engines": {
     "node": "8.11.1",
