--- a/package.json
+++ b/package.json
@@ -16,12 +16,10 @@
     "url": "https://github.com/PsychoChris89/FIFA_World_Cup_Social_Network.git"
   },
   "scripts": {
-    "start": "nodemon",
-    "client": "cd client && npm start",
+    "start": "node ./dist/server.generated.js",
+    "heroku-postbuild": "cd client && npm install --only=dev && npm install && npm run build",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js"
   
-    
- 
   },
   "engines": {
     "node": "8.11.1",
