--- a/package.json
+++ b/package.json
@@ -16,9 +16,8 @@
     "url": "https://github.com/PsychoChris89/FIFA_World_Cup_Social_Network.git"
   },
   "scripts": {
-    "start": "node ./dist/server.generated.js",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
-  
+    "start": "NODE_ENV=production node ./dist/server.generated.js"
   },
   "engines": {
     "node": "8.11.1",
