Change start script

--- a/package.json
+++ b/package.json
@@ -20,7 +20,7 @@
   "scripts": {
     "development": "nodemon",
     "build": "webpack --config webpack.config.client.production.js && webpack --mode=production --config webpack.config.server.js",
-    "start": "NODE_ENV=production node ./dist/server.generated.js"
+    "start": "node ./dist/server.generated.js"
   },
   "engines": {
     "node": "8.11.1",
